# yapl

./: .gitignore  Cargo.toml  README.md  build.rs
benches/: 1oversinx.rs  lnx.rs
examples/: 1oversinx.rs  1overx.rs  lnx.rs  sin1overx.rs  sinx.rs  x.rs
mathjax-wrapper/: main.mjs  package-lock.json  package.json  tsconfig.json  util.mjs
mathjax-wrapper/src/: io.mts  main.mts  render.d.mts  render.mjs  render.mts  util.mts
src/: codegen.rs  codegen_svg.rs  elements.rs  lib.rs  main.rs  math.rs  misc.rs  plotfn.rs  style.rs  tex.rs  typesetting.rs  typography.rs
src/elements/: axis.rs  cplane.rs  function.rs  mod.rs
tests/: 1oversinx.rs  1overx.rs  lnx.rs  sin1overx.rs  sinx.rs  x.rs
