[package]
name = "yapl"
version = "0.1.0-wip"
edition = "2021"
include = [
  "src/*",
  "Cargo.toml",
  "README.md",
  "mathjax-wrapper/src/*",
  "mathjax-wrapper/package.json",
  "mathjax-wrapper/package-lock.json",
  "mathjax-wrapper/tsconfig.json",
  "examples/*",
  "readme-assets/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
