[package]
name = "yapl"
version = "0.1.0-wip"
edition = "2021"
include = [
  "src/**/*.rs",
  "Cargo.toml",
  "./README.md",
  "mathjax-wrapper/src/**/*.mts",
  "mathjax-wrapper/src/**/*.mjs",
  "mathjax-wrapper/package.json",
  "mathjax-wrapper/package-lock.json",
  "mathjax-wrapper/tsconfig.json",
  "examples/**/*.rs",
  "readme-assets/**/*.svg",  
  "readme-assets/**/*.png"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
