[package]
name = "yapl"
version = "0.1.0-wip"
edition = "2021"
include = [
  "src/**/*.rs",
  "Cargo.toml",
  "./README.md",
  "mathjax-wrapper/src/**/*.mts",
  "mathjax-wrapper/src/**/*.mjs",
  "mathjax-wrapper/package.json",
  "mathjax-wrapper/package-lock.json",
  "mathjax-wrapper/tsconfig.json",
  "tests/**/*.rs",
  "tests/**/*.svg",
  "examples/**/*.rs",
  "readme-assets/**/*.svg",  
  "readme-assets/**/*.png"
]

[[bench]]
name = "1oversinx"
harness = false

[dependencies]
criterion = "0.5.1"
